DEFECT 8925 - Spacing Issues - Remove class 'padding-50-0-sm' from the below container bg-gray-1st
<!--Large Product Tile-->
<div class="container bg-gray-1st">
    <div class="row wrapper">
        <!--Changed 5/18/16 by anthony harris -->
            <div class="product-row__tile--img-tile box-shadow large-promo-tile">
                <div class="product-row__tile--img-tile__text">
                    <div class="product-row__tile__promo white">Headline Copy of 55 Characters maximum.
                    </div>
                    <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed douiuio eiusmo tempor
                        incididunt ut labore et dolore magna aliqua ut enad.</p>
                    <button href="#" class="btn-brand-2nd table">Call to Action</button>

                </div>
                <div class="product-row__tile__img-tile__img"
                     style="background-image: url('images/product_card/subcat_promo_card.png');">
                </div>
            </div>
    </div>
</div>

--- a/dev/css/component/product-tile.css
+++ b/dev/css/component/product-tile.css
@@ -14,7 +14,7 @@
     background-color: #0E5DAE;
     padding: 0;
     text-align: center;
-    margin: 10px 0;
+    margin: 10px 0 30px;
 }
 
 .product-row__tile__img-tile__img {
